# global_hotkey_spotify

./: .gitignore  README.md  callback.html  package.json  pnpm-lock.yaml
.github/workflows/: main.yml
public/: callback.html
src/: App.vue  style.css
src-tauri/: .gitignore  .hotkey_cache.json  .hotkeys.json  .spotify_token.json  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: Todo.txt  api.rs  backupapi.rs  hotkey.rs  main.rs
