[package]
name = "spotify-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Required for spotify api
rspotify = { version = "0.13.3", default-features = false, features = ["client-reqwest", "env-file", "cli"] }
tokio = "1.42.0"

# Required for hotkey
global-hotkey = "0.6.3"
keyboard-types = "0.7"
rand = "0.8"
crossbeam-channel = "0.5"