[package]
name = "global-hotkey-spotify"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2"
log = "0.4"
once_cell = "1.8.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

# Required for spotify api
rspotify = { version = "0.13.3", default-features = false, features = ["client-reqwest", "env-file", "cli"] }
tokio = "1.42.0"
winapi = { version = "0.3", features = ["winsock2"] }

# Required for hotkey
global-hotkey = "0.6.3"
keyboard-types = "0.7"
rand = "0.8"
crossbeam-channel = "0.5"
